fixed vertical-align #2

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -78,6 +78,7 @@ section
 	font-weight: bold
 	cursor: pointer
 	font-size: 19px
+	vertical-align: middle
 
 *[class$=__button-gray]
 	margin-top: 50px
@@ -90,6 +91,7 @@ section
 	font-weight: bold
 	cursor: pointer
 	font-size: 19px
+	vertical-align: middle
 
 header
 	display: flex
@@ -227,6 +229,7 @@ header
 		&::before
 			content: url(../img/qwey.png)
 			padding-right: 20px
+			vertical-align: middle
 
 .portfolio
 	&__image
